--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "csvtojson": "^0.5.3",
     "ejs": "2.4.1",
     "express": "4.13.3",
     "mongodb": "^2.1.16",
